# SearchEngine

./: App.cpp  App.h  CMakeLists.txt  ConverterJson.cpp  ConverterJson.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  Tests.cpp  main.cpp
JSON/: answers.json  requests.json
QtApp/: CMakeLists.txt  QtApp.cpp
Resources/: file001.txt  file002.txt  file003.txt  file004.txt
Tests/: CMakeLists.txt  Tests.cpp
